modify string.java file